# safecopy-rust

./: Cargo.toml  LICENSE  README.md
safecopy/: Cargo.toml
safecopy-macros/: Cargo.toml
safecopy-macros/src/: lib.rs
safecopy-macros/tests/: safecopy_test.rs
safecopy/src/: lib.rs
src/: lib.rs
